--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "cli-engine": "^4.7.6",
     "eslint-config-airbnb": "^18.0.1",
     "express": "^4.17.1",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.5",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
@@ -21,6 +24,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.1"
   }
 }
