--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cli-engine": "^4.7.6",
     "eslint-config-airbnb": "^18.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
